<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigationView"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true">

    <ScrollView
        android:id="@+id/svBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:fillViewport="true"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/rlNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:paddingBottom="32dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="32dp">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/imvProfilePhoto"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_profile"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="1dp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/lblFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imvProfilePhoto"
                    android:layout_marginTop="8dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:fontFamily="@font/zawgyi"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_medium" />

            </RelativeLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/nav_lblTransfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlProfile"
                android:layout_marginTop="32dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:fontFamily="@font/zawgyi"
                android:textColor="@color/colorPrimary"
                android:text="@string/navigation_drawer__transfer_balance"
                android:textSize="@dimen/text_size_medium"
                android:paddingLeft="16dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/nav_lblTransactionHistory"
                android:fontFamily="@font/zawgyi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_lblTransfer"
                android:layout_marginTop="32dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingStart="16dp"
                android:text="@string/navigation_drawer__transactions_history"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_medium"
                tools:ignore="RtlSymmetry" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/nav_lblHelpCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_lblTransactionHistory"
                android:layout_marginTop="32dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/navigation_drawer__help_center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_medium"
                android:fontFamily="@font/zawgyi"
                tools:ignore="RtlSymmetry" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/nav_lblSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_lblHelpCenter"
                android:layout_marginTop="30dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/zawgyi"
                android:gravity="start"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingStart="16dp"
                android:text="@string/navigation_drawer__settings"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_medium"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>
    </ScrollView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/rlNavigation"
        android:layout_gravity="bottom"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="2dp">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/lblMyanmar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navigation_drawer__myanmar"
                android:fontFamily="@font/zawgyi"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_medium" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchBtnLanguageMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:theme="@style/SwitchThemeDefault" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/lblEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navigation_drawer__english"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_medium"
                android:fontFamily="@font/zawgyi" />

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.CardView>
</android.support.design.widget.NavigationView>